Bug 411030 - Attempt to move one split to new category moves all splits with same category
Summary: Attempt to move one split to new category moves all splits with same category
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-18 06:41 UTC by Thomas Baumgart
Modified: 2019-08-18 06:46 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.6
Sentry Crash Report:
tbaumgart: Backport+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2019-08-18 06:41:36 UTC
SUMMARY
In KMyMoney, in a transaction with multiple splits, where more than one 
split is assigned to the same category, attempts to change only one 
split to a new category changes all splits with the same category to the 
new category.

STEPS TO REPRODUCE
1. Go to 'Categories'
2. Select original category and open ledger
3. Select transaction split to move to new category
4. Right click & select 'Move transaction to...'
5. Select desired new category from the 'Select Account' list.


OBSERVED RESULT
All splits assigned to original category within the same transaction are moved to new category, even though only one split is selected.

EXPECTED RESULT
Only the selected split/s is/are moved to the new category.

ADDITIONAL INFORMATION
Reported by jillelaine01@gmail.com on the developer list
Comment 1 Thomas Baumgart 2019-08-18 06:46:00 UTC
Git commit ab92d1e117a1d88cabf184ca5319c4924399fc60 by Thomas Baumgart.
Committed on 18/08/2019 at 06:45.
Pushed by tbaumgart into branch '5.0'.

Do not move all splits of a transaction

In KMyMoney, in a transaction with multiple splits, where more than one
split is assigned to the same category, attempts to change only one
split to a new category changes all splits with the same category to the
new category.

This change only moves the selected transaction. Also, it only removes
those accounts from the list that are not referenced by the selected
splits which was detected during the course of the fix of the original
problem.
FIXED-IN: 5.0.6

M  +14   -17   kmymoney/views/kgloballedgerview.cpp

https://commits.kde.org/kmymoney/ab92d1e117a1d88cabf184ca5319c4924399fc60